tree-sitter-pshtml/test/corpus/dat_comment.txt
===
DAT comments
===
~[Comment: This is a colon comment]
Hi ~[Comment; This is a semicolon comment, which I prefer]
~[Comment; also, they can contain ~(DATs) that are ~(not) quite ignored, but not displayed. Should I parse its children?]

---

(document
  (dat
    (square_dat
      (dat_name)
      (dat_target)))
  (text)
  (dat
    (square_dat
      (dat_name)
      (dat_option
        (dat_option_name))))
  (dat
    (square_dat
      (dat_name)
      (dat_option
        (dat_option_name)))))
